# recipe_scraper

./: .gitignore  INSTAGRAM_BLOCKING.md  MODULE_STRUCTURE.md  README.md
.github/workflows/: tests.yml
recipe_scraper/: __init__.py  cli.py  core.py  pyproject.toml
recipe_scraper/.github/workflows/: tests.yml
recipe_scraper/fetchers/: __init__.py  instagram.py
recipe_scraper/parsers/: __init__.py  ollama.py  regex.py
recipe_scraper/recipe_scraper/: utils.py
recipe_scraper/recipe_scraper/fetchers/: website.py
recipe_scraper/recipe_scraper/parsers/: schema.py
recipe_scraper/tests/: fixtures.py  test_core.py  test_fetchers.py  test_parsers.py
tests/: __init__.py
