[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recipe_scraper"
version = "0.1.0"
description = "Extract structured recipe data from Instagram posts and recipe websites"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = [
    "recipe",
    "scraping",
    "instagram",
    "web-scraping",
    "structured-data",
    "json-ld",
    "schema-org"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]

dependencies = [
    "instaloader>=4.10.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/recipe_scraper"
Documentation = "https://github.com/yourusername/recipe_scraper#readme"
Repository = "https://github.com/yourusername/recipe_scraper.git"
Issues = "https://github.com/yourusername/recipe_scraper/issues"

[project.scripts]
recipe-scraper = "recipe_scraper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["recipe_scraper"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line-too-long (black handles this)

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=recipe_scraper --cov-report=term-missing"
